# ofxCMake

./: README.md
addOns/: template_addOn_simple.cmake  template_addOn_withLibs.cmake
addOns/internal/: ofxAssimpModelLoader.cmake  ofxEmscripten.cmake  ofxGui.cmake  ofxKinect.cmake  ofxNetwork.cmake  ofxObjLoader.cmake  ofxOpenCv.cmake  ofxOpenCvCustom.cmake  ofxOsc.cmake  ofxPoco.cmake  ofxSvg.cmake  ofxThreadedImageLoader.cmake  ofxVectorGraphics.cmake  ofxXmlSettings.cmake
modules/: FindGStreamer.cmake  addOns.cmake  addOnsMacros.cmake  config.cmake  configApple.cmake  configLinux.cmake  main.cmake  openFrameworks.cmake  openFrameworksApple.cmake  openFrameworksLinux.cmake
project/: CMakeLists.txt
